force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>This Object is created to store all the properties information.</description>
    <label>Property</label>
    <nameField>
        <displayFormat>PROP-{0000}</displayFormat>
        <label>Property ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>