force-app/main/default/objects/Property__c/fields/Buying_date__c.field-meta.xml
<CustomField>
    <fullName>Buying_date__c</fullName>
    <label>Buying date</label>
    <type>Date</type>
</CustomField>