force-app/main/default/objects/Property__c/fields/Google_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_URL__c</fullName>
    <label>Google URL</label>
    <type>Url</type>
</CustomField>