force-app/main/default/objects/Property__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Property is not sold, it should be Active.</inlineHelpText>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>