force-app/main/default/objects/Property__c/fields/Last_Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Date_Time__c</fullName>
    <label>Last Visit Date/Time</label>
    <type>DateTime</type>
</CustomField>