force-app/main/default/objects/Property__c/fields/Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms__c</fullName>
    <label>Number of Rooms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>