force-app/main/default/objects/Property__c/fields/Owner_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email_ID__c</fullName>
    <label>Owner Email ID</label>
    <required>true</required>
    <type>Email</type>
</CustomField>