force-app/main/default/objects/Property__c/fields/Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_ID__c</fullName>
    <displayFormat>OWN-{0000}</displayFormat>
    <label>Owner ID</label>
    <type>AutoNumber</type>
</CustomField>