force-app/main/default/objects/Property__c/fields/Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Property_Description__c</fullName>
    <label>Property Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>