force-app/main/default/objects/Property__c/fields/Property_Interest__c.field-meta.xml
<CustomField>
    <fullName>Property_Interest__c</fullName>
    <label>Property Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Park Area</fullName>
            </value>
            <value>
                <fullName>Parking Area</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Town House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>