force-app/main/default/objects/Property__c/fields/Property_Location__c.field-meta.xml
<CustomField>
    <fullName>Property_Location__c</fullName>
    <label>Property Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>