force-app/main/default/objects/Property__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <inlineHelpText>Please enter property registration date.</inlineHelpText>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>