force-app/main/default/objects/Property__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <label>Seller Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>