force-app/main/default/objects/Property__c/fields/Text_Rich_Filed__c.field-meta.xml
<CustomField>
    <fullName>Text_Rich_Filed__c</fullName>
    <label>Text Rich Field</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>