force-app/main/default/objects/Property__c/recordTypes/Residential_Property.recordType-meta.xml
<RecordType>
    <fullName>Residential_Property</fullName>
    <active>true</active>
    <label>Residential Property</label>
</RecordType>