force-app/main/default/objects/Property__c/validationRules/Approved_Status_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Status_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( Status__c , &quot;Approved&quot;), 
ISBLANK( Buying_date__c )    )</errorConditionFormula>
    <errorDisplayField>Buying_date__c</errorDisplayField>
    <errorMessage>Buying cannot blank if Property is Approved.</errorMessage>
</ValidationRule>