force-app/main/default/objects/Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Google_URL__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Number_of_Rooms__c</columns>
    <columns>Owner_Email_ID__c</columns>
    <columns>Owner_ID__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Property__c.Commercial_Record</value>
    </filters>
    <label>All</label>
</ListView>